Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Sling
 description: SLING    is powerful  Programming  Language invented    in  WEB  by  wilmix jemin  j for  Terminal WebService at  year  2016.
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 
 gems:
   - jekyll-mentions
